still tryna fix retirement mobile spacing

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -165,7 +165,8 @@
     }
 
     .tool-grid {
-      margin-right: 18%;
+      margin-right: 20%;
+      gap: 40px;
     }
 
     .tool-card img {
